sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: value unary_! is not a member of Int
  while(!echange)
        ^AlgBubbleSort1:9: error: Int does not take parameters
      echange(i,i+1)
             ^